# harmonogram_rust

./: Cargo.toml  Session.vim  a.harm.json
src/: main.rs  main_080.rs  widgets.rs
